# MinecraftModsLocalizer

./: .gitignore  LICENSE  README.md  bunfig.toml  eslint.config.mjs  jest.config.js  jest.setup.js  next-i18next.config.js  next.config.ts  package.json  pyproject.toml  test-summary.md  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  setup.sh
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
dev/: Dockerfile
docs/: TASK_008_Fix_Progress_Calculation_And_History_Dialog_Issues.md  TASK_009_Fix_Mod_Progress_Calculation_And_Add_Alphabetical_Sorting.md  TASK_010_Fix_Tauri_Errors_And_Mod_Level_Progress.md  TASK_011_Fix_History_Dialog_And_Enhance_Completion_Dialog.md  TASK_012_Improve_Target_Language_Selector_UI_And_Consolidate_Language_Selection.md  TASK_013_Install_And_Implement_Storybook.md  TESTING.md  ci-cd.md  spec.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/NATIVE_DIALOG:/home/node/craft2exile/logs/localizer/2025-07-17_11-54-15/: translation_summary.json
src-tauri/NATIVE_DIALOG:/home/node/craft2exile/logs/localizer/2025-07-17_12-01-42/: translation_summary.json
src-tauri/NATIVE_DIALOG:/home/node/craft2exile/logs/localizer/2025-07-17_12-07-56/: translation_summary.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  config.rs  filesystem.rs  lib.rs  logging.rs
src-tauri/src/minecraft/: debug_translation_check.rs  mod.rs  mod_translation_test.rs
src-tauri/src/tests/: lang_file_test.rs  mod.rs
src-tauri/tests/: mod_translation_integration.rs
(+166 files in other folders)
